--- a/src/slashMenuReact/styles/menu-style.css
+++ b/src/slashMenuReact/styles/menu-style.css
@@ -2,8 +2,8 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  height: 500px;
-  width: 300px;
+  height: 150px;
+  width: 200px;
   z-index: 100;
   overflow: scroll;
   border-radius: 0.3rem;
@@ -17,6 +17,10 @@
   padding: 0.2rem 0.5rem;
 }
 
+.menu-element-selected {
+  background-color: #f1f1f1;
+}
+
 .menu-element-icon {
   width: 23px;
   height: auto;
@@ -24,15 +28,11 @@
   align-items: center;
 }
 
-.menu-element {
+.menu-element-label {
   color: black;
   display: flex;
   align-items: center;
   margin-left: 0.5rem;
-}
-
-.menu-element-selected {
-  background-color: #f1f1f1;
 }
 
 .menu-placeholder {
@@ -54,11 +54,6 @@
   font-style: italic;
 }
 
-.menu-backarrow {
-  width: 17px;
-  height: auto;
-  margin: 0.5rem 0 0.2rem 0.5rem;
-}
 
 .submenu-label{
   margin-left: 0.5rem;
