--- a/src/slashMenuReact/styles/menu-style.css
+++ b/src/slashMenuReact/styles/menu-style.css
@@ -2,7 +2,8 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    height: 150px;
+    flex: 1;
+    max-height: 150px;
     width: 200px;
     z-index: 100;
     overflow: scroll;
